--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "bootstrap": "^4.5.2",
+    "dotenv": "^8.2.0",
     "isomorphic-fetch": "^3.0.0",
     "next": "9.5.4",
     "next-redux-wrapper": "^6.0.2",
@@ -25,6 +26,8 @@
     "nprogress": "^0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-google-login": "^5.1.23",
+    "react-places-autocomplete": "^7.3.0",
     "react-redux": "^7.2.1",
     "reactstrap": "^8.6.0",
     "redux": "^4.0.5",
