--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
-    "slugify": "^1.4.5"
+    "slugify": "^1.4.5",
+"sweetalert2": "^10.15.5"
   }
 }
